Separate sorting of entry date and entry order

BUG: 423783
FIXED-IN: 5.2